--- a/MoneySaver.App/wwwroot/index.html
+++ b/MoneySaver.App/wwwroot/index.html
@@ -60,6 +60,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
