Budget item edit and delete

--- a/MoneySaver.App/wwwroot/index.html
+++ b/MoneySaver.App/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="_content/Radzen.Blazor/css/default-base.css" rel="stylesheet" />
+    <link href="css/fontawesome/css/all.css" rel="stylesheet" />
     <style>
         .highcharts-figure, .highcharts-data-table table {
             min-width: 320px;
@@ -69,6 +70,7 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <script src="https://kit.fontawesome.com/aeec6ae061.js" crossorigin="anonymous"></script>
     <script src="js/pieChart.js"></script>
 </body>
 
