--- a/MoneySaver.App/wwwroot/index.html
+++ b/MoneySaver.App/wwwroot/index.html
@@ -72,6 +72,7 @@
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <script src="https://kit.fontawesome.com/aeec6ae061.js" crossorigin="anonymous"></script>
     <script src="js/pieChart.js"></script>
+    <script src="js/lineChart.js"></script>
 </body>
 
 </html>
