--- a/MoneySaver.App/wwwroot/index.html
+++ b/MoneySaver.App/wwwroot/index.html
@@ -54,7 +54,14 @@
 </head>
 
 <body>
-    <app>Loading...</app>
+    <app>
+        <div style="position:absolute; top:30vh; width:100%; text-align:center">
+            <!--<p><i class="fas fa-spin fa-spinner"></i> The application is loading...</p>-->
+            <div class="spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+    </app>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
